# multi-tenant-chatbot

./: .dockerignore  .env.example  .gitignore  .slugignore  FRONTEND_REQUIREMENTS.md  Procfile  README.md  deploy-heroku.sh  pyproject.toml  requirements-dev.txt  requirements-heroku.txt  requirements.txt  setup-docker.sh  setup_multi_tenant.py
docs/: ARCHITECTURE.md
evaluation/: README.md  ragas_analysis.py  ragas_evaluator.py  run_ragas.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/login/: page.tsx
frontend/app/organizations/: page.tsx
frontend/components/auth/: auth-provider.tsx  protected-route.tsx
frontend/components/chat/: chat-input.tsx  chat-message.tsx  chat-sidebar.tsx
infra/docker/: Dockerfile  docker-compose.yml
infra/sql/: 001_init.sql  002_multi_tenant.sql  002_users_and_conversations.sql  003_documents_table.sql
src/: __init__.py
src/app/: enhanced_streaming.py  ingestion_runner.py  jobs.py  server.py
src/eval/: __init__.py  eval.py
src/guards/: __init__.py  guards.py
src/ingest/: __init__.py  document_ingest.py  ingest.py
src/retrieval/: __init__.py  hybrid.py  hybrid_manager.py  rerank.py  retriever.py
src/storage/: __init__.py  auth.py  conversations.py  db.py  documents.py  milvus.py  organizations.py  pine.py
src/ui/: __init__.py  app.py
src/ui/pages/: documents.py  organizations.py
src/utils/: cache.py  db_init.py  retries.py
